@@ -8,6 +8,7 @@ import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
@@ -19,19 +20,23 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ServiceOfApplication;
 import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
 import uk.gov.hmcts.reform.prl.services.document.DocumentGenService;
-import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import uk.gov.hmcts.reform.prl.utils.DocumentUtils;
+import uk.gov.hmcts.reform.prl.utils.ElementUtils;
 
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C1A_BLANK_DOCUMENT_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C7_BLANK_DOCUMENT_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DOCUMENT_COVER_SHEET_HINT;
@@ -39,47 +44,35 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ENG_STATIC_DOCS
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.PRIVACY_DOCUMENT_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_C9_PERSONAL_SERVICE_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_FL415_FILENAME;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_FL416_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_MEDIATION_VOUCHER_FILENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_MULTIPART_FILE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_NOTICE_SAFETY;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.THIS_INFORMATION_IS_CONFIDENTIAL;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.URL_STRING;
+import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
+import static uk.gov.hmcts.reform.prl.utils.DocumentUtils.toGeneratedDocumentInfo;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 @SuppressWarnings({"java:S6204"})
 public class ServiceOfApplicationPostService {
-
-    @Autowired
-    private BulkPrintService bulkPrintService;
-
-    @Autowired
-    private DocumentGenService documentGenService;
-
-    @Autowired
-    private DocumentLanguageService documentLanguageService;
-
-    @Autowired
-    private DgsService dgsService;
-
-    @Autowired
-    private CaseDocumentClient caseDocumentClient;
-
-    @Autowired
-    private AuthTokenGenerator authTokenGenerator;
-
+    private final BulkPrintService bulkPrintService;
+    private final DocumentGenService documentGenService;
+    private final DocumentLanguageService documentLanguageService;
+    private final DgsService dgsService;
+    private final CaseDocumentClient caseDocumentClient;
+    private final AuthTokenGenerator authTokenGenerator;
+    private final LaunchDarklyClient launchDarklyClient;
     private static final String LETTER_TYPE = "ApplicationPack";
-
 
     public BulkPrintDetails sendPostNotificationToParty(CaseData caseData,
                                                         String authorisation,
                                                         PartyDetails partyDetails,
                                                         List<Document> docs, String servedParty) {
         // Sends post
-        return sendBulkPrint(caseData, authorisation, docs, partyDetails.getAddress(),
-                             partyDetails.getLabelForDynamicList(), servedParty
-        );
+        return sendBulkPrint(caseData, authorisation, docs, partyDetails, servedParty);
     }
 
     public GeneratedDocumentInfo getCoverLetterGeneratedDocInfo(CaseData caseData, String auth, Address address, String name) throws Exception {
@@ -104,17 +97,53 @@ public class ServiceOfApplicationPostService {
                     caseData,
                     DOCUMENT_COVER_SHEET_HINT,
                     documentLanguage.isGenEng() ? Boolean.FALSE : Boolean.TRUE
-                ));
+                )
+            );
         } else {
             log.error("ADDRESS NOT PRESENT, CAN NOT GENERATE COVER LETTER");
         }
         return generatedDocumentInfo;
     }
 
-    public List<Document> getStaticDocs(String auth, CaseData caseData) {
+    public List<Document> getCoverLetter(CaseData caseData, String auth, Address address, String name) throws Exception {
+        GeneratedDocumentInfo generatedDocumentInfo = null;
+        Map<String, Object> dataMap = new HashMap<>();
+        List<Document> coverLetterDocs = new ArrayList<>();
+        DocumentLanguage documentLanguage = documentLanguageService.docGenerateLang(caseData);
+        if (null != address && null != address.getAddressLine1()) {
+            dataMap.put("coverPagePartyName", name);
+            dataMap.put("coverPageAddress", address);
+            dataMap.put("id", String.valueOf(caseData.getId()));
+            if (documentLanguage.isGenEng()) {
+                generatedDocumentInfo = dgsService.generateDocument(
+                    auth, String.valueOf(caseData.getId()),
+                    documentGenService.getTemplate(
+                        caseData,
+                        DOCUMENT_COVER_SHEET_HINT, Boolean.FALSE
+                    ), dataMap
+                );
+                coverLetterDocs.add(DocumentUtils.toCoverSheetDocument(generatedDocumentInfo));
+            }
+            if (documentLanguage.isGenWelsh()) {
+                generatedDocumentInfo = dgsService.generateDocument(
+                    auth, String.valueOf(caseData.getId()),
+                    documentGenService.getTemplate(
+                        caseData,
+                        DOCUMENT_COVER_SHEET_HINT, Boolean.TRUE
+                    ), dataMap
+                );
+                coverLetterDocs.add(DocumentUtils.toCoverSheetDocument(generatedDocumentInfo));
+            }
+        } else {
+            log.error("ADDRESS NOT PRESENT, CAN NOT GENERATE COVER LETTER");
+        }
+        return coverLetterDocs;
+    }
+
+    public List<Document> getStaticDocs(String auth, String caseType) {
         List<Document> generatedDocList = new ArrayList<>();
         UploadResponse uploadResponse = null;
-        if (PrlAppsConstants.C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
+        if (C100_CASE_TYPE.equalsIgnoreCase(caseType)) {
             uploadResponse = caseDocumentClient.uploadDocuments(
                 auth,
                 authTokenGenerator.generate(),
@@ -125,37 +154,37 @@ public class ServiceOfApplicationPostService {
                         SOA_MULTIPART_FILE,
                         PRIVACY_DOCUMENT_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + PRIVACY_DOCUMENT_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + PRIVACY_DOCUMENT_FILENAME)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         SOA_MEDIATION_VOUCHER_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + SOA_MEDIATION_VOUCHER_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + SOA_MEDIATION_VOUCHER_FILENAME)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         SOA_NOTICE_SAFETY,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + SOA_NOTICE_SAFETY)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + SOA_NOTICE_SAFETY)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         C7_BLANK_DOCUMENT_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + C7_BLANK_DOCUMENT_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + C7_BLANK_DOCUMENT_FILENAME)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         SOA_C9_PERSONAL_SERVICE_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + SOA_C9_PERSONAL_SERVICE_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + SOA_C9_PERSONAL_SERVICE_FILENAME)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         C1A_BLANK_DOCUMENT_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + C1A_BLANK_DOCUMENT_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + C1A_BLANK_DOCUMENT_FILENAME)
                     )
                 )
             );
@@ -171,19 +200,13 @@ public class ServiceOfApplicationPostService {
                         SOA_MULTIPART_FILE,
                         PRIVACY_DOCUMENT_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + PRIVACY_DOCUMENT_FILENAME)
-                    ),
-                    new InMemoryMultipartFile(
-                        SOA_MULTIPART_FILE,
-                        SOA_FL416_FILENAME,
-                        APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + SOA_FL416_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + PRIVACY_DOCUMENT_FILENAME)
                     ),
                     new InMemoryMultipartFile(
                         SOA_MULTIPART_FILE,
                         SOA_FL415_FILENAME,
                         APPLICATION_PDF_VALUE,
-                        DocumentUtils.readBytes(ENG_STATIC_DOCS_PATH + SOA_FL415_FILENAME)
+                        DocumentUtils.readBytes(URL_STRING + ENG_STATIC_DOCS_PATH + SOA_FL415_FILENAME)
                     )
                 )
             );
@@ -197,36 +220,82 @@ public class ServiceOfApplicationPostService {
         return Collections.emptyList();
     }
 
+    public CaseData getRespondentCaseData(PartyDetails partyDetails, CaseData caseData) {
+        return CaseData
+            .builder()
+            .id(caseData.getId())
+            .respondents(List.of(element(partyDetails)))
+            .build();
+    }
+
+    public List<GeneratedDocumentInfo> getUploadedDocumentsServiceOfApplication(CaseData caseData) {
+        List<GeneratedDocumentInfo> docs = new ArrayList<>();
+        Optional<Document> pd36qLetter = Optional.ofNullable(caseData.getServiceOfApplicationUploadDocs().getPd36qLetter());
+        Optional<Document> specialArrangementLetter = Optional.ofNullable(caseData.getServiceOfApplicationUploadDocs()
+                                                                              .getSpecialArrangementsLetter());
+        pd36qLetter.ifPresent(document -> docs.add(toGeneratedDocumentInfo(document)));
+        specialArrangementLetter.ifPresent(document -> docs.add(toGeneratedDocumentInfo(document)));
+        return docs;
+    }
+
+    public Document getFinalDocument(CaseData caseData) {
+        if (!welshCase(caseData)) {
+            return caseData.getFinalDocument();
+        }
+        return caseData.getFinalWelshDocument();
+    }
+
+    public Optional<Document> getC1aDocument(CaseData caseData) {
+        if (hasAllegationsOfHarm(caseData)) {
+            if (!welshCase(caseData)) {
+                return Optional.of(caseData.getC1ADocument());
+            }
+            return Optional.of(caseData.getC1AWelshDocument());
+        }
+        return Optional.empty();
+    }
+
+    private boolean welshCase(CaseData caseData) {
+        return caseData.getFinalWelshDocument() != null;
+    }
+
+    private boolean hasAllegationsOfHarm(CaseData caseData) {
+        return Yes.equals(caseData.getAllegationOfHarm().getAllegationsOfHarmYesNo());
+    }
+
     private BulkPrintDetails sendBulkPrint(CaseData caseData, String authorisation,
-                                          List<Document> docs, Address address, String name, String servedParty) {
-        List<Document> sentDocs = new ArrayList<>();
+                                           List<Document> docs, PartyDetails partyDetails, String servedParty) {
         ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of("Europe/London"));
         String currentDate = DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss").format(zonedDateTime);
         String bulkPrintedId = "";
         try {
             log.info("*** Initiating request to Bulk print service ***");
             log.info("*** number of files in the pack *** {}", null != docs ? docs.size() : "empty");
-            UUID bulkPrintId = bulkPrintService.send(
-                String.valueOf(caseData.getId()),
-                authorisation,
-                LETTER_TYPE,
-                docs,
-                name
-            );
-            log.info("ID in the queue from bulk print service : {}", bulkPrintId);
-            bulkPrintedId = String.valueOf(bulkPrintId);
-            sentDocs.addAll(docs);
-
+            if (launchDarklyClient.isFeatureEnabled("soa-bulk-print")) {
+                log.info("******Bulk print is enabled****");
+                UUID bulkPrintId = bulkPrintService.send(
+                    String.valueOf(caseData.getId()),
+                    authorisation,
+                    LETTER_TYPE,
+                    docs,
+                    partyDetails.getLabelForDynamicList()
+                );
+                log.info("ID in the queue from bulk print service : {}", bulkPrintId);
+                bulkPrintedId = String.valueOf(bulkPrintId);
+            }
         } catch (Exception e) {
-            log.info("The bulk print service has failed: {}", e);
+            log.error("The bulk print service has failed", e);
         }
+        Address address = Yes.equals(partyDetails.getIsAddressConfidential())
+            ? Address.builder().addressLine1(THIS_INFORMATION_IS_CONFIDENTIAL).build()
+            : partyDetails.getAddress();
+
         return BulkPrintDetails.builder()
             .bulkPrintId(bulkPrintedId)
             .servedParty(servedParty)
-            .printedDocs(String.join(",", docs.stream().map(a -> a.getDocumentFileName()).collect(
-                Collectors.toList())))
-            .recipientsName(name)
-            .printDocs(docs.stream().map(e -> element(e)).collect(Collectors.toList()))
+            .printedDocs(String.join(",", docs.stream().map(Document::getDocumentFileName).toList()))
+            .recipientsName(partyDetails.getLabelForDynamicList())
+            .printDocs(docs.stream().map(ElementUtils::element).toList())
             .postalAddress(address)
             .timeStamp(currentDate).build();
     }
