@@ -3,35 +3,56 @@ package uk.gov.hmcts.reform.prl.services;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections.CollectionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaSolicitorServingRespondentsEnum;
+import uk.gov.hmcts.reform.prl.enums.serviceofapplication.StatementOfServiceWhatWasServed;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicList;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
+import uk.gov.hmcts.reform.prl.models.complextypes.serviceofapplication.SoaPack;
+import uk.gov.hmcts.reform.prl.models.documents.Document;
+import uk.gov.hmcts.reform.prl.models.dto.bulkprint.BulkPrintDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.notify.serviceofapplication.EmailNotificationDetails;
+import uk.gov.hmcts.reform.prl.models.serviceofapplication.ServedApplicationDetails;
 import uk.gov.hmcts.reform.prl.models.serviceofapplication.StmtOfServiceAddRecipient;
+import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import uk.gov.hmcts.reform.prl.utils.IncrementalInteger;
 
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ALL_RESPONDENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C9_DOCUMENT_FILENAME;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.DD_MMM_YYYY_HH_MM_SS;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EUROPE_LONDON_TIME_ZONE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_FL415_FILENAME;
+import static uk.gov.hmcts.reform.prl.services.ServiceOfApplicationService.COURT;
+import static uk.gov.hmcts.reform.prl.services.ServiceOfApplicationService.PRL_COURT_ADMIN;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class StmtOfServImplService {
-
-    @Autowired
-    private ObjectMapper objectMapper;
+    public static final String RESPONDENT_WILL_BE_SERVED_PERSONALLY_BY_POST = "Respondent has been served personally by Court,"
+        + " hence no bulk print id is generated";
+    public static final String RESPONDENT_WILL_BE_SERVED_PERSONALLY_BY_EMAIL = "Respondent has been served personally by Court through email";
+    private final ObjectMapper objectMapper;
+    private final UserService userService;
 
     public Map<String, Object> retrieveRespondentsList(CaseDetails caseDetails) {
         CaseData caseData = objectMapper.convertValue(
@@ -40,7 +61,7 @@ public class StmtOfServImplService {
         );
 
         Map<String, Object> caseDataUpdated = caseDetails.getData();
-        List<Element<StmtOfServiceAddRecipient>> stmtOfServiceAddRecipient = new ArrayList();
+        List<Element<StmtOfServiceAddRecipient>> stmtOfServiceAddRecipient = new ArrayList<>();
         stmtOfServiceAddRecipient.add(element(StmtOfServiceAddRecipient.builder()
                                                   .respondentDynamicList(DynamicList.builder()
                                                                              .listItems(getRespondentsList(caseData))
@@ -50,23 +71,24 @@ public class StmtOfServImplService {
                                                                              .build())
                                                   .build()));
 
+        log.info("Statement of service dynamic list value:: {}", stmtOfServiceAddRecipient);
         caseDataUpdated.put("stmtOfServiceAddRecipient", stmtOfServiceAddRecipient);
         return caseDataUpdated;
-
     }
 
-    public CaseData retrieveAllRespondentNames(CaseDetails caseDetails) {
+    public Map<String, Object> retrieveAllRespondentNames(CaseDetails caseDetails, String authorisation) {
+        Map<String, Object> caseDataUpdateMap = caseDetails.getData();
         CaseData caseData = objectMapper.convertValue(
             caseDetails.getData(),
             CaseData.class
         );
 
-        List<Element<StmtOfServiceAddRecipient>> addRecipientElementList = caseData.getStmtOfServiceAddRecipient();
+        List<Element<StmtOfServiceAddRecipient>> addRecipientElementList = caseData.getStatementOfService().getStmtOfServiceAddRecipient();
         List<Element<StmtOfServiceAddRecipient>> elementList = new ArrayList<>();
         List<StmtOfServiceAddRecipient> recipients = addRecipientElementList
             .stream()
             .map(Element::getValue)
-            .collect(Collectors.toList());
+            .toList();
 
         for (StmtOfServiceAddRecipient recipient : recipients) {
             if (C100_CASE_TYPE.equals(caseData.getCaseTypeOfApplication())) {
@@ -75,27 +97,23 @@ public class StmtOfServImplService {
                         .getRespondents()
                         .stream()
                         .map(Element::getValue)
-                        .collect(Collectors.toList());
+                        .toList();
                     List<String> respondentNamesList = respondents.stream()
                         .map(element -> element.getFirstName() + " " + element.getLastName())
-                        .collect(Collectors.toList());
-                    String allRespondentNames = String.join(", ", respondentNamesList);
+                        .toList();
+                    String allRespondentNames = String.join(", ", respondentNamesList).concat(" (All respondents)");
                     recipient = recipient.toBuilder()
-                        .respondentDynamicList(DynamicList.builder()
-                                                   .value(DynamicListElement.builder()
-                                                              .code(UUID.randomUUID())
-                                                              .label(allRespondentNames)
-                                                              .build()).build())
+                        .respondentDynamicList(null)
+                        .selectedPartyId("00000000-0000-0000-0000-000000000000")
+                        .selectedPartyName(allRespondentNames)
                         .stmtOfServiceDocument(recipient.getStmtOfServiceDocument())
                         .servedDateTimeOption(recipient.getServedDateTimeOption())
                         .build();
                 } else {
                     recipient = recipient.toBuilder()
-                        .respondentDynamicList(DynamicList.builder()
-                                                   .value(DynamicListElement.builder()
-                                                              .code(recipient.getRespondentDynamicList().getValue().getCode())
-                                                              .label(recipient.getRespondentDynamicList().getValue().getLabel())
-                                                              .build()).build())
+                        .respondentDynamicList(null)
+                        .selectedPartyId(recipient.getRespondentDynamicList().getValue().getCode())
+                        .selectedPartyName(recipient.getRespondentDynamicList().getValue().getLabel())
                         .stmtOfServiceDocument(recipient.getStmtOfServiceDocument())
                         .servedDateTimeOption(recipient.getServedDateTimeOption())
                         .build();
@@ -103,22 +121,106 @@ public class StmtOfServImplService {
 
             } else if (FL401_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())) {
                 recipient = recipient.toBuilder()
-                    .respondentDynamicList(DynamicList.builder()
-                                               .value(DynamicListElement.builder()
-                                                          .label(caseData.getRespondentsFL401().getFirstName()
-                                                                     + " " + caseData.getRespondentsFL401().getLastName())
-                                                          .build()).build())
+                    .respondentDynamicList(null)
+                    .selectedPartyId(recipient.getRespondentDynamicList().getValue().getCode())
+                    .selectedPartyName(recipient.getRespondentDynamicList().getValue().getLabel())
                     .stmtOfServiceDocument(recipient.getStmtOfServiceDocument())
                     .servedDateTimeOption(recipient.getServedDateTimeOption())
                     .build();
             }
+            if (isNotEmpty(caseData.getServiceOfApplication())
+                && isNotEmpty(caseData.getServiceOfApplication().getUnServedRespondentPack())
+                && CollectionUtils.isNotEmpty(caseData.getServiceOfApplication().getUnServedRespondentPack().getPackDocument())
+                && StatementOfServiceWhatWasServed.statementOfServiceApplicationPack
+                .equals(caseData.getStatementOfService()
+                            .getStmtOfServiceWhatWasServed())
+            ) {
+                caseData = cleanupRespondentPacksCaOrBailiffPersonalService(caseData, authorisation);
+                caseDataUpdateMap.put(
+                    "finalServedApplicationDetailsList",
+                    caseData.getFinalServedApplicationDetailsList()
+                );
+                caseDataUpdateMap.put("unServedRespondentPack", null);
+            }
             elementList.add(element(recipient));
         }
-        caseData = caseData.toBuilder()
-            .stmtOfServiceAddRecipient(elementList)
-            .build();
 
-        return caseData;
+        caseDataUpdateMap.put(
+            "stmtOfServiceForApplication",
+            appendStatementOfServiceToSoaTab(
+                caseData,
+                elementList
+            )
+        );
+        caseDataUpdateMap.put(
+            "stmtOfServiceForOrder",
+            appendStatementOfServiceToOrdersTab(
+                caseData,
+                elementList
+            )
+        );
+        caseDataUpdateMap.put("stmtOfServiceAddRecipient", null);
+        caseDataUpdateMap.put("stmtOfServiceWhatWasServed", null);
+        return caseDataUpdateMap;
+    }
+
+    private List<Element<StmtOfServiceAddRecipient>> appendStatementOfServiceToSoaTab(
+        CaseData caseData,
+        List<Element<StmtOfServiceAddRecipient>> statementOfServiceListFromCurrentEvent) {
+
+        if (StatementOfServiceWhatWasServed.statementOfServiceApplicationPack
+            .equals(caseData.getStatementOfService()
+                        .getStmtOfServiceWhatWasServed())) {
+            if (CollectionUtils.isNotEmpty(caseData.getStatementOfService().getStmtOfServiceForApplication())) {
+                statementOfServiceListFromCurrentEvent.addAll(caseData.getStatementOfService().getStmtOfServiceForApplication());
+            }
+            return statementOfServiceListFromCurrentEvent;
+        } else {
+            if (CollectionUtils.isNotEmpty(caseData.getStatementOfService().getStmtOfServiceForApplication())) {
+                return caseData.getStatementOfService().getStmtOfServiceForApplication();
+            }
+        }
+        return Collections.emptyList();
+    }
+
+    private List<Element<StmtOfServiceAddRecipient>> appendStatementOfServiceToOrdersTab(
+        CaseData caseData,
+        List<Element<StmtOfServiceAddRecipient>> statementOfServiceListFromCurrentEvent) {
+
+        if (StatementOfServiceWhatWasServed.statementOfServiceOrder
+            .equals(caseData.getStatementOfService()
+                        .getStmtOfServiceWhatWasServed())) {
+            if (CollectionUtils.isNotEmpty(caseData.getStatementOfService().getStmtOfServiceForOrder())) {
+                statementOfServiceListFromCurrentEvent.addAll(caseData.getStatementOfService().getStmtOfServiceForOrder());
+            }
+            return statementOfServiceListFromCurrentEvent;
+        } else {
+            if (CollectionUtils.isNotEmpty(caseData.getStatementOfService().getStmtOfServiceForOrder())) {
+                return caseData.getStatementOfService().getStmtOfServiceForOrder();
+            }
+        }
+
+        return Collections.emptyList();
+    }
+
+    private CaseData cleanupRespondentPacksCaOrBailiffPersonalService(CaseData caseData, String authorisation) {
+        List<Element<ServedApplicationDetails>> finalServedApplicationDetailsList = new ArrayList<>();
+        List<Element<EmailNotificationDetails>> emailNotificationDetails = new ArrayList<>();
+        List<Element<BulkPrintDetails>> bulkPrintDetails = new ArrayList<>();
+        if (CollectionUtils.isNotEmpty(caseData.getFinalServedApplicationDetailsList())) {
+            finalServedApplicationDetailsList = caseData.getFinalServedApplicationDetailsList();
+        }
+        finalServedApplicationDetailsList.add(element(checkAndServeRespondentPacksCaOrBailiffPersonalService(
+            emailNotificationDetails,
+            bulkPrintDetails,
+            caseData.getServiceOfApplication().getUnServedRespondentPack(),
+            authorisation,
+            CaseUtils.getCaseTypeOfApplication(caseData)
+        )));
+        return caseData.toBuilder()
+            .finalServedApplicationDetailsList(finalServedApplicationDetailsList)
+            .serviceOfApplication(caseData.getServiceOfApplication().toBuilder().unServedRespondentPack(null).build())
+            .build();
     }
 
     private List<DynamicListElement> getRespondentsList(CaseData caseData) {
@@ -126,13 +228,10 @@ public class StmtOfServImplService {
         List<DynamicListElement> respondentListItems = new ArrayList<>();
         IncrementalInteger i = new IncrementalInteger(1);
         if (respondents != null) {
-            respondents.forEach(respondent -> {
-                respondentListItems.add(DynamicListElement.builder().code(respondent.getId().toString())
-                                  .label(respondent.getValue().getFirstName() + " "
-                                             + respondent.getValue().getLastName()
-                                             + " (Respondent " + i.getAndIncrement() + ")").build());
-
-            });
+            respondents.forEach(respondent -> respondentListItems.add(DynamicListElement.builder().code(respondent.getId().toString())
+                              .label(respondent.getValue().getFirstName() + " "
+                                         + respondent.getValue().getLastName()
+                                         + " (Respondent " + i.getAndIncrement() + ")").build()));
             respondentListItems.add(DynamicListElement.builder().code(ALL_RESPONDENTS).label(ALL_RESPONDENTS).build());
         } else if (caseData.getRespondentsFL401() != null) {
             String name = caseData.getRespondentsFL401().getFirstName() + " "
@@ -145,5 +244,59 @@ public class StmtOfServImplService {
         return respondentListItems;
     }
 
-
+    public ServedApplicationDetails checkAndServeRespondentPacksCaOrBailiffPersonalService(
+        List<Element<EmailNotificationDetails>> emailNotificationDetails,
+                           List<Element<BulkPrintDetails>> bulkPrintDetails,
+                           SoaPack unServedRespondentPack,
+                           String authorization, String casTypeOfApplication) {
+        if (FL401_CASE_TYPE.equalsIgnoreCase(casTypeOfApplication)) {
+            unServedRespondentPack = unServedRespondentPack.toBuilder()
+                .packDocument(unServedRespondentPack.getPackDocument()
+                                  .stream()
+                                  .filter(d -> !d.getValue().getDocumentFileName().equalsIgnoreCase(
+                                      SOA_FL415_FILENAME)).toList())
+                .build();
+        } else {
+            unServedRespondentPack = unServedRespondentPack.toBuilder()
+                .packDocument(unServedRespondentPack.getPackDocument()
+                                  .stream()
+                                  .filter(d -> !d.getValue().getDocumentFileName().equalsIgnoreCase(
+                                      C9_DOCUMENT_FILENAME)).toList())
+                .build();
+        }
+        if (SoaSolicitorServingRespondentsEnum.courtAdmin.toString().equalsIgnoreCase(unServedRespondentPack.getPersonalServiceBy())) {
+            emailNotificationDetails.add(element(EmailNotificationDetails.builder()
+                                                     .emailAddress(RESPONDENT_WILL_BE_SERVED_PERSONALLY_BY_EMAIL)
+                                                     .servedParty(PRL_COURT_ADMIN)
+                                                     .docs(unServedRespondentPack.getPackDocument())
+                                                     .attachedDocs(String.join(",", unServedRespondentPack
+                                                         .getPackDocument().stream()
+                                                         .map(Element::getValue)
+                                                         .map(Document::getDocumentFileName).toList()))
+                                                     .timeStamp(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss")
+                                                                    .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
+                                                     .build()));
+        } else if (SoaSolicitorServingRespondentsEnum.courtBailiff.toString()
+            .equalsIgnoreCase(unServedRespondentPack.getPersonalServiceBy())) {
+            bulkPrintDetails.add(element(BulkPrintDetails.builder()
+                                             .servedParty(PRL_COURT_ADMIN)
+                                             .bulkPrintId(RESPONDENT_WILL_BE_SERVED_PERSONALLY_BY_POST)
+                                             .printedDocs(String.join(",", unServedRespondentPack
+                                                 .getPackDocument().stream()
+                                                 .map(Element::getValue)
+                                                 .map(Document::getDocumentFileName).toList()))
+                                             .printDocs(unServedRespondentPack.getPackDocument())
+                                             .timeStamp(DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss")
+                                                            .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
+                                             .build()));
+        }
+        ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of(EUROPE_LONDON_TIME_ZONE));
+        String formatter = DateTimeFormatter.ofPattern(DD_MMM_YYYY_HH_MM_SS).format(zonedDateTime);
+        return ServedApplicationDetails.builder().emailNotificationDetails(emailNotificationDetails)
+            .servedBy(userService.getUserDetails(authorization).getFullName())
+            .servedAt(formatter)
+            .modeOfService(CaseUtils.getModeOfService(emailNotificationDetails, bulkPrintDetails))
+            .whoIsResponsible(COURT)
+            .bulkPrintDetails(bulkPrintDetails).build();
+    }
 }
