@@ -12,11 +12,15 @@ import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.model.SearchResult;
 import uk.gov.hmcts.reform.prl.filter.cafcaas.CafCassFilter;
 import uk.gov.hmcts.reform.prl.mapper.CcdObjectMapper;
+import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.cafcass.hearing.CaseHearing;
 import uk.gov.hmcts.reform.prl.models.cafcass.hearing.Hearings;
+import uk.gov.hmcts.reform.prl.models.dto.cafcass.ApplicantDetails;
+import uk.gov.hmcts.reform.prl.models.dto.cafcass.CafCassCaseData;
 import uk.gov.hmcts.reform.prl.models.dto.cafcass.CafCassCaseDetail;
 import uk.gov.hmcts.reform.prl.models.dto.cafcass.CafCassResponse;
 import uk.gov.hmcts.reform.prl.models.dto.cafcass.CaseManagementLocation;
+import uk.gov.hmcts.reform.prl.models.dto.cafcass.Element;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.Bool;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.Filter;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.LastModified;
@@ -27,6 +31,7 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.request.QueryParam;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.Range;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.Should;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.request.StateFilter;
+import uk.gov.hmcts.reform.prl.services.OrganisationService;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
 
 import java.io.IOException;
@@ -70,6 +75,8 @@ public class CaseDataService {
 
     private final RefDataService refDataService;
 
+    private final OrganisationService organisationService;
+
     public CafCassResponse getCaseData(String authorisation, String startDate, String endDate) throws IOException {
 
         log.info("Search API start date - {}, end date - {}", startDate, endDate);
@@ -78,7 +85,7 @@ public class CaseDataService {
 
         try {
             if (caseTypeList != null && !caseTypeList.isEmpty()) {
-                caseTypeList = caseTypeList.stream().map(String::trim).collect(Collectors.toList());
+                caseTypeList = caseTypeList.stream().map(String::trim).toList();
 
                 ObjectMapper objectMapper = CcdObjectMapper.getObjectMapper();
                 objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
@@ -109,13 +116,77 @@ public class CaseDataService {
                     log.info("After applying filter Result Size --> {}", cafCassResponse.getTotal());
                     CafCassResponse filteredCafcassData = getHearingDetailsForAllCases(authorisation, cafCassResponse);
                     updateHearingResponse(authorisation, s2sToken, filteredCafcassData);
-
+                    updateSolicitorAddressForParties(filteredCafcassData);
+                    return CafCassResponse.builder()
+                        .cases(filteredCafcassData.getCases())
+                        .total(filteredCafcassData.getCases().size())
+                        .build();
                 }
             }
         } catch (Exception e) {
             log.error("Error in search cases {}", e);
+            throw e;
         }
         return cafCassResponse;
+    }
+
+    private void updateSolicitorAddressForParties(CafCassResponse filteredCafcassData) {
+        Map<String, Address> orgIdToAddressMap = new HashMap<>();
+        List<String> orgIdListForAllCases = new ArrayList<>();
+        filteredCafcassData.getCases().stream().forEach(
+            caseDetail -> {
+                CafCassCaseData cafCassCaseData = caseDetail.getCaseData();
+                orgIdListForAllCases.addAll(cafCassCaseData.getApplicants().stream()
+                    .filter(party -> party.getValue().getSolicitorOrg() != null)
+                    .map(partyDetail -> partyDetail.getValue().getSolicitorOrg().getOrganisationID())
+                    .collect(Collectors.toList()));
+                orgIdListForAllCases.addAll(cafCassCaseData.getRespondents().stream()
+                                                   .filter(party -> party.getValue().getSolicitorOrg() != null)
+                                                   .map(partyDetail -> partyDetail.getValue().getSolicitorOrg().getOrganisationID())
+                                                   .toList());
+            });
+        orgIdListForAllCases.stream().distinct()
+            .forEach(orgId ->
+                         orgIdToAddressMap.put(
+                             orgId,
+                             organisationService.getOrganisationDetails(
+                                     systemUserService.getSysUserToken(),
+                                     orgId
+                                 )
+                                 .getContactInformation().get(0).toAddress()
+                         ));
+
+
+        filteredCafcassData.getCases().stream().forEach(
+            caseDetail -> {
+                CafCassCaseData cafCassCaseData = caseDetail.getCaseData();
+                cafCassCaseData = cafCassCaseData.toBuilder()
+                    .respondents(cafCassCaseData.getRespondents().stream()
+                                     .map(updatedParty -> {
+                                         if (updatedParty.getValue().getSolicitorOrg() == null) {
+                                             return updatedParty;
+                                         }
+                                         Address address = orgIdToAddressMap.get(updatedParty.getValue().getSolicitorOrg().getOrganisationID());
+                                         return Element.<ApplicantDetails>builder().id(updatedParty.getId())
+                                             .value(updatedParty.getValue().toBuilder()
+                                                        .solicitorAddress(
+                                                            address != null
+                                                                ? uk.gov.hmcts.reform.prl.models.dto.cafcass.Address.builder()
+                                                                .addressLine1(address.getAddressLine1())
+                                                                .addressLine2(address.getAddressLine2())
+                                                                .addressLine3(address.getAddressLine3())
+                                                                .county(address.getCounty())
+                                                                .country(address.getCountry())
+                                                                .postTown(address.getPostTown())
+                                                                .postCode(address.getPostCode())
+                                                                .build() : null
+                                                        )
+                                                        .build()).build();
+                                     })
+                                     .toList()).build();
+                caseDetail.setCaseData(cafCassCaseData);
+            });
+
     }
 
     private QueryParam buildCcdQueryParam(String startDate, String endDate) {
@@ -139,7 +210,7 @@ public class CaseDataService {
     }
 
     private List<Should> populateStatesForQuery() {
-        caseStateList = caseStateList.stream().map(String::trim).collect(Collectors.toList());
+        caseStateList = caseStateList.stream().map(String::trim).toList();
 
         List<Should> shoulds = new ArrayList<>();
         if (caseStateList != null && !caseStateList.isEmpty()) {
@@ -161,7 +232,7 @@ public class CaseDataService {
 
     private CafCassResponse getHearingDetailsForAllCases(String authorisation, CafCassResponse cafCassResponse) {
         CafCassResponse filteredCafcassResponse = CafCassResponse.builder()
-            .cases(new ArrayList<CafCassCaseDetail>())
+            .cases(new ArrayList<>())
             .build();
         Map<String, String> caseIdWithRegionIdMap = new HashMap<>();
         for (CafCassCaseDetail caseDetails : cafCassResponse.getCases()) {
@@ -188,6 +259,11 @@ public class CaseDataService {
             caseIdWithRegionIdMap
         );
 
+        updateHearingDataCafcass(filteredCafcassResponse, listOfHearingDetails);
+        return filteredCafcassResponse;
+    }
+
+    private void updateHearingDataCafcass(CafCassResponse filteredCafcassResponse, List<Hearings> listOfHearingDetails) {
         if (null != listOfHearingDetails && !listOfHearingDetails.isEmpty()) {
             for (CafCassCaseDetail cafCassCaseDetail : filteredCafcassResponse.getCases()) {
                 Hearings filteredHearing =
@@ -199,20 +275,17 @@ public class CaseDataService {
                     cafCassCaseDetail.getCaseData().setCourtTypeId(filteredHearing.getCourtTypeId());
                     filteredHearing.setCourtName(null);
                     filteredHearing.setCourtTypeId(null);
-                    filteredHearing.getCaseHearings().stream().forEach(
-                        caseHearing -> {
-                            caseHearing.getHearingDaySchedule().stream().forEach(
+                    filteredHearing.getCaseHearings().forEach(
+                        caseHearing -> caseHearing.getHearingDaySchedule().forEach(
                                 hearingDaySchedule -> {
                                     hearingDaySchedule.setEpimsId(hearingDaySchedule.getHearingVenueId());
                                     hearingDaySchedule.setHearingVenueId(null);
                                 }
-                            );
-                        }
+                            )
                     );
                 }
             }
         }
-        return filteredCafcassResponse;
     }
 
     private void updateHearingResponse(String authorisation, String s2sToken, CafCassResponse cafCassResponse) {
